[fix] overflow body

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -107,7 +107,6 @@ button {
     }
   }
   body {
-    overflow-x: hidden;
-    overflow-y: scroll;
+    overflow: hidden;
   }
 }
